# amcp-platform-clients

./: .gitignore  readme
apps/desktop-client/: CMakeLists.txt  README.md
apps/desktop-client/amcp-admin-desktop/: CMakeLists.txt  resources.qrc
apps/desktop-client/amcp-admin-desktop/src/: main.cpp
apps/desktop-client/amcp-user-desktop/: CMakeLists.txt  resources.qrc
apps/desktop-client/amcp-user-desktop/src/: main.cpp
apps/web-client/: .gitignore
apps/web-client/amcp-admin-client/: README.md  angular.json  package-lock.json  package.json  vercel.json
apps/web-client/amcp-admin-client/src/: index.html
apps/web-client/amcp-admin-client/src/app/: app.html  app.spec.ts  app.ts
apps/web-client/amcp-web-client/: README.md  angular.json  package-lock.json  package.json
apps/web-client/amcp-web-client/src/: index.html
apps/web-client/amcp-web-client/src/app/: app.css  app.html  app.spec.ts  app.ts
